meteor/client/styles/countdown/presenter.scss
@import '../colorScheme';

.presenter-screen {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;

	font-size: 1vh;

	display: grid;
	grid-template: 4fr 3fr fit-content(1em) / auto;

	overflow: hidden;
	white-space: nowrap;

	.presenter-screen__part {
		display: grid;
		grid-template:
			10em
			4fr
			6fr / 13vw auto;

		.presenter-screen__segment-name {
			grid-row: 1;
			grid-column: 1 / -1;
			text-align: center;
			font-size: 8em;
			font-weight: bold;

			&.live {
				background: $general-live-color;
				color: #fff;
				border-top: 0.1em solid #fff;
			}

			&.next {
				background: $general-next-color;
				color: #000;
				border-top: 0.1em solid #fff;
			}
		}

		.presenter-screen__rundown-countdown {
			grid-row: 2 / -1;
			grid-column: 1 / -1;

			text-align: center;
			display: flex;
			align-items: center;
			justify-content: center;

			font-size: 12vw;
		}

		.presenter-screen__part__piece-icon {
			grid-row: 2;
			grid-column: 1;
			padding: 1em;

			text-align: center;
			display: flex;
			align-items: center;
			justify-content: center;
		}

		.presenter-screen__part__piece-name {
			grid-row: 2;
			grid-column: 2;
			text-align: left;
			font-size: 13em;
			overflow: hidden;
			white-space: nowrap;
			padding-left: 0.2em;

			display: flex;
			align-items: center;

			.presenter-screen__part__auto-next-icon {
				display: block;
				min-width: 1em;
				max-width: 1em;
			}
		}

		.presenter-screen__part__piece-countdown {
			text-align: left;

			display: flex;
			align-items: center;
			font-size: 13em;
			padding: 0 0.2em;
			line-height: 1em;

			> img.freeze-icon {
				width: 0.9em;
				height: 0.9em;
				margin-left: -0.05em;
				margin-top: -0.05em;
			}
		}

		.presenter-screen__part__part-countdown {
			text-align: right;

			display: flex;
			align-items: center;
			justify-content: flex-end;
			font-size: 13em;
			padding: 0 0.2em;
			line-height: 1em;

			> span {
				font-size: 2em;
			}
		}

		.presenter-screen__part__piece-countdown,
		.presenter-screen__part__part-countdown {
			grid-row: 3;
			grid-column: 2;
			color: $general-countdown-to-next-color;
		}

		&.presenter-screen__part--next-part {
			.presenter-screen__part__piece-icon,
			.presenter-screen__part__piece-name {
				grid-row: 2 / -1;
			}
		}
	}

	.presenter-screen__rundown-status-bar {
		display: grid;
		grid-template-columns: auto fit-content(5em);
		grid-template-rows: fit-content(1em);
		font-size: 6em;
		color: #888;
		padding: 0 0.2em;

		.presenter-screen__rundown-status-bar__rundown-name {
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
			line-height: 1.44em;
		}

		.presenter-screen__rundown-status-bar__countdown {
			white-space: nowrap;

			color: $general-countdown-to-next-color;

			font-weight: 600;
			font-size: 1.2em;

			&.over {
				color: $general-late-color;
			}
		}
	}

	.presenter-screen__part + .presenter-screen__part {
		border-top: solid 0.8em #454545;
	}

	.clocks-segment-countdown-red {
		color: $general-late-color;
	}

	.clocks-counter-heavy {
		font-weight: 600;
	}
}

